updated version of portfolio

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <title>Lovepreet Mehra | Full Stack Developer</title>
     <meta name="description" content="Portfolio of Lovepreet Mehra - Full Stack Developer specializing in React, Node.js, PostgreSQL/MySQL.">
     <link rel="icon" href="/favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   </head>
-  <body class="bg-gray-950 text-white">
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
